feat: 提供暫時用假數據

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -75,38 +75,6 @@
           </div>
         </div>
         <ul id="article-container" class="list-group col-sm-12 mb-2"></ul>
-        <!-- <div class="article">
-          <div class="article-left">
-            <div class="author">
-              <div class="author-img">
-                <img src="author-img.png" />
-              </div>
-              <div class="author-username">newlean14</div>
-            </div>
-            <div class="title">Bridge Bidding Strategy</div>
-            <div class="preview">
-              You should always open the bidding with 12+ high-card points. You
-              can open the bidding with slightly fewer than 12 points when you
-              have a shapely hand. Use the Rule of 20 - which states that you
-              can open the bidding when your high-card point-count added to the
-              number of cards in your two longest suits gets to 20.
-            </div>
-          </div>
-          <div class="article-right">
-            <div class="read-favorite">
-                <div class="read">READ</div>
-                <div class="add-to-favorite">
-                    <i class="fa-regular fa-heart add-to-favorite-btn"></i>
-                </div>
-            </div>
-            <div class="status">
-                <i class="fa-solid fa-comment comment"> 88</i>
-                <i class="fa-solid fa-thumbs-up like"> 49</i>
-                <i class="fa-solid fa-thumbs-down dislike"> 3</i>
-                <i class="fa-solid fa-heart favorite"> 7</i>
-            </div>
-          </div>
-        </div> -->
       </section>
     </main>
 
@@ -116,6 +84,7 @@
 
   <script src="https://kit.fontawesome.com/6fb9682f78.js" crossorigin="anonymous"></script>
   <script src="../js/utils.js"></script>
+  <script src="../js/fake-data.js"></script>
   <script src="../js/index.js"></script>
 </body>
 
