--- a/src/html/login.html
+++ b/src/html/login.html
@@ -52,9 +52,9 @@
       <section id="loginSection">
         <h2 id="loginH2">登入會員</h2>
         <div id="loginErrorMsg"></div>
-        <form id="loginForm">
+        <div id="loginForm">
           <label>Email:</label>
-          <input type="email" id="email" name="email" maxlength="25" required />
+          <input type="email" id="email" name="email" maxlength="30" required />
           <label>密碼:</label>
           <input
             type="password"
@@ -64,7 +64,7 @@
             required
           />
           <button type="submit" id="loginSubmit">登入</button>
-        </form>
+        </div>
         <h3 id="loginH3">尚無帳號？<a href="register.html">註冊帳號</a></h3>
       </section>
     </main>
