--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -68,7 +68,10 @@
         <br />
         <label id="email">Email:<input type="text" /></label>
         <br />
-        <label id="photo">Photo <button>上傳圖片</button></label>
+        <label for="file-upload" style="cursor: pointer;">
+          <input id="file-upload" type="file" name="image" style="display: none;" accept="image/*">
+          <button id="upload-btn">上傳圖片</button>
+        </label>
         <br />
         <div id="profile-img">
           <img 
