--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -76,7 +76,7 @@
         <div id="profile-img">
           <img 
             id="profile-image"
-            src="https://assets-global.website-files.com/60d196db74a1e36ff16ebd5d/63c117f19e248b737369b165_puppy-g3237d6104_1920.jpg"
+            src=""
             alt="user profile image"
           />
         </div>
