feat:針對edit 頁面， 刪除 文章作者 欄位

--- a/src/html/edit.html
+++ b/src/html/edit.html
@@ -45,14 +45,14 @@
         </div>
 
         <div class="list-profile-container">
-            <!-- UserList -->
-            <div class="user-list">
-                <a href="user.html"><i class="fa-solid fa-users fa-2xl"></i></a>
-            </div>
-            <!-- Profile -->
-            <div class="profile-picture">
-                <a href="profile.html"><img src="../data/Alex.png" /></a>
-            </div>
+          <!-- UserList -->
+          <div class="user-list">
+            <a href="user.html"><i class="fa-solid fa-users fa-2xl"></i></a>
+          </div>
+          <!-- Profile -->
+          <div class="profile-picture">
+            <a href="profile.html"><img src="../data/Alex.png" /></a>
+          </div>
         </div>
       </nav>
     </header>
@@ -62,13 +62,8 @@
         <label class="article-title">
           文章標題: <input type="text" id="title" data-key="title" /> </label
         ><br />
-        <label class="article-author">
-          文章作者: <input type="text" id="author" data-key="author" />
-        </label>
-        <br />
         <label>文章類別: </label>
-        <select data-key="category" class="article-category">
-        </select>
+        <select data-key="category" class="article-category"></select>
         <div class="article-context">
           文章內容:
           <article>
