feat: 讀取文章作者的名稱和頭像 & 留言區帶入當前用戶的名稱和頭像

--- a/src/html/article.html
+++ b/src/html/article.html
@@ -71,7 +71,7 @@
         <div class="commenter-img">
           <img src="../data/Alex.png" />
         </div>
-        <div class="commenter-name">Alex</div>
+        <div class="commenter-name"></div>
       </div>
 
       <form id="commentForm">
