--- a/src/html/index.html
+++ b/src/html/index.html
@@ -21,39 +21,7 @@
 
   <body>
     <!-- Header -->
-    <header>
-      <nav class="nav-bar">
-        <div class="icon">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-            <!-- 圓圈 -->
-            <circle cx="50" cy="50" r="40" fill="#c32f27" />
-            <!-- 文字 "A" -->
-            <text
-              x="50"
-              y="57"
-              font-family="Arial"
-              font-size="50"
-              fill="#f9c80e"
-              text-anchor="middle"
-              dominant-baseline="middle"
-            >
-              A
-            </text>
-          </svg>
-        </div>
-
-        <div class="list-profile-container">
-          <!-- UserList -->
-          <div class="user-list">
-            <a href="user.html"><i class="fa-solid fa-users fa-2xl"></i></a>
-          </div>
-          <!-- Profile -->
-          <div class="profile-picture">
-            <a href="profile.html"><img src="../data/Alex.png" /></a>
-          </div>
-        </div>
-      </nav>
-    </header>
+    <header></header>
 
     <main>
       <!-- Article list -->
