feat: 用戶個人頁不可修改 email，改為單純文字呈現

--- a/src/html/profile.html
+++ b/src/html/profile.html
@@ -60,13 +60,11 @@
 
     <main>
       <div class="article-content">
-        <label id="user-id"> </label>
+        <label id="user-id">User ID:</label>
         <br />
-        <label id="user-name"
-          >User Name:<input type="text"
-        /></label>
+        <label id="user-name">User Name:<input type="text"/></label>
         <br />
-        <label id="email">Email:<input type="text" /></label>
+        <label id="email">Email:</label>
         <br />
         <label for="file-upload" style="cursor: pointer;">
           <input id="file-upload" type="file" name="image" style="display: none;" accept="image/*">
